<resources>
    <string name="app_name">My Application</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="genre">Genre :</string>
    <string name="released_date">Released date :</string>
    <string name="movieInfo">Movie info</string>
    <string name="display_at">Display At</string>
    <string name="cinematica">Cinematica</string>
    <string name="login">Login</string>
    <string name="search">search</string>
    <string name="time_and_price_details">Time and price details</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="action">Action</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>
    <string name="fantasy">Fantasy</string>
    <string name="pass_Alreadychange_toast">Password already changed</string>
    <string name="cinemas">Cinemas</string>
    <string name="playing_now">Playing now:</string>
    <string name="different_type">different type:</string>
    <string name="most_popular">Most popular:</string>
    <string name="near_by">Near by</string>
    <string name="_3d">3D</string>
    <string name="log_out">Log out</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="e_mail">E_mail:</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="mail2">mail:</string>
    <string name="passwordl">Password:</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="enter_email_linked_to_this_acount">Enter Email linked to this acount</string>
</resources>