<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/back"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/movie_img_slider"
                android:layout_width="match_parent"
                android:layout_height="260dp">

            </androidx.viewpager.widget.ViewPager>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/slider_img_indicator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:tabBackground="@drawable/slider_img_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp">

            </com.google.android.material.tabs.TabLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_page_moviePlaynow"
                    style="@style/Movie_diss_mainTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/playing_now" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp">

                <ImageView
                    android:id="@+id/popup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_expand_more" />

                <TextView
                    android:id="@+id/home_page_movieMOstpopular2"
                    style="@style/Movie_diss_mainTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/different_type"
                    tools:ignore="RelativeOverlap" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_recycle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_page_movieMOstpopular2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_page_movieMOstpopular"
                    style="@style/Movie_diss_mainTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/most_popular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_recycle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>